[tool.poetry]
name = "skewed-die-roll-position-size"
version = "0.1.0"
description = "experiment to find optimal position size for betting on a skewed die"
authors = ["Max Schulte <maximilliangschulte@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
plotille = "^4.0.2"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
